# automation_wiki

./: .gitignore  Dockerfile  README.md  pyproject.toml
archive/bloqueio/: bloqueio.csv
management/: agile_azure_devops.md  report_aprint.md
mod/config/: app_config.yaml
mod/data/raspagem/: doc_scraping.py  web_scraping.py
mod/doc/: base.py  pdf.py
mod/doc/modelos/: model1.py
mod/log/: loggers.py
mod/main/: main_1.py
mod/model/: credito.py  enums.py  raspagem.py
mod/raspagem_web/automacao_navegador/: navegacao_web.py
mod/raspagem_web/automacao_navegador/interacao/: base.py
mod/raspagem_web/automacao_navegador/model/: enums.py
mod/raspagem_web/automacao_navegador/navegador/: base.py  chrome.py  edge.py  firefox.py  undetected_chrome.py
mod/review/: data_hora.py
mod/service/: consolidar.py  fluxo_procedimentos.py  input.py  output.py
mod/utils/: funcoes_auxiliares.py
mod/web_source/: web_source.py
