[project]
name = "py_wiki"
version = "0.0.0"
description = "Conjunto de informaçòes relacionadas a Python e susas aplicações"
requires-python = ">=3.9"
authors = [
    { name = "Fernando Silva", email = "fmoliveira617@gmail.com" }
]

[project.urls]
Repository = "https://github.com/fmoli617/py_wiki"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = [
 "A", # flake8-builtins
 "ANN", # flake8-annotations
 "B", # flake8-bugbear
 "COM", # flake8-commas
 "N", # pep8-naming
 "D", # pydocstyle
 "E", # pycodestyle Error
 "F", # pyflakes
 "I", # isort
 "PLC", # Pylint Convention
 "PLE", # Pylint Error
 "PLR", # Pylint Refactor
 "PLW", # Pylint Warning
 "SIM", # flake8-simplify
 "UP", # pyupgrade
 "W", # pycodestyle Warning
]

ignore = [
 "ANN101", # missing-type-self
 "B006", # mutable-argument-default
 "COM812", # missing-trailing-comma
 "D100", # undocumented-public-module
 "D104", # undocumented-public-package
 "D203", # one-blank-line-before-class
 "D213", # multi-line-summary-second-line
 "PLR2004", # magic-value-comparison
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false
line-ending = "auto"